--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <joda.version>2.7</joda.version>
         <guava.version>18.0</guava.version>
         <alchemy.version>1.1.6</alchemy.version>
+        <validator.version>1.4.1</validator.version>
     </properties>
 
     <dependencies>
@@ -60,6 +61,11 @@
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>${joda.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>${validator.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
